k8s/tsdd/ainuo/tsdd/tsdd-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ainuo-tsdd-server
  namespace: ainuo
  labels:
    name: ainuo-tsdd-server
spec:
  serviceName: "ainuo-tsdd-server"
  replicas: 1
  selector:
    matchLabels:
      name: ainuo-tsdd-server
  template:
    metadata:
      labels:
        name: ainuo-tsdd-server
    spec:
      containers:
      - name: ainuo-tsdd-server
        image: haidao900/tsdd-server:ainuo-ainuo-v2-1-918708e
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1"
            memory: "2000M"
          limits:
            cpu: "3"
            memory: "4000M"
        ports:
        - containerPort: 8090
          name: http
        - containerPort: 6979
          name: webhook
        volumeMounts:
        - mountPath: /home/tsdd/tsdd.yaml
          name: tsdd-config
          subPath: tsdd.yaml
        - mountPath: /home/tsdd/tsdddata/logs
          name: tsdd-logs
          subPath: tsdd.log
      volumes:
      - name: tsdd-config
        configMap:
          name: tsdd-config
          items:
          - key: tsdd.yaml
            path: tsdd.yaml
  volumeClaimTemplates:
  - metadata:
      name: tsdd-logs
    spec:
      accessModes: 
        - ReadWriteOnce
      storageClassName: gp3
      resources:
        requests:
          storage: 50Gi
