k8s/tsdd/ainuo/tsdd/tsdd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ainuo-tsdd-svc
  namespace: ainuo
spec:
  type: ClusterIP
  selector:
    name: ainuo-tsdd-server
  ports:
    - name: webhook
      port: 6979
      targetPort: 6979
      protocol: TCP
    - name: http
      port: 8090
      targetPort: 8090
      protocol: TCP
